<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="name_field_hint">Nome</string>
    <string name="email_field_hint">Email</string>
    <string name="phone_field_hint">Telefone</string>
    <string name="acs_clear_field">limpar campo</string>
    <string name="send_new_message">Enviar nova mensagem</string>
    <string name="thank_you">Obrigado</string>
    <string name="success_message">Mensagem enviada com sucesso :)</string>
</resources>